Refactor CORS configuration to disable credentials